--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
    <div class="find">
         <div class="search">
             <input type="text" placeholder="Enter City Name" spellcheck="false">
-            <button><img src="Images/search.png"></button>
+            <button><img src="search.png"></button>
         </div>
         <div class="wrong">
          <p>Invalid City Name</p>
         </div>
         <div class="weather">
-            <img src="Images/rain.png" class="icon">
+            <img src="rain.png" class="icon">
             <h1 class="temp">22°C</h1>
             <h2 class="city">New York</h2>
             <div class= "detail">
                 <div class="col">
-                     <img src="Images/humidity.png">
+                     <img src="humidity.png">
                         <div>
                             <p class="humidity">50%</p>
                             <p>Humidity</p>
                         </div>
                </div>
                <div class="col">
-                    <img src="Images/wind.png">
+                    <img src="wind.png">
                    <div>
                     <p class="wind">15kmph</p>
                     <p>Wind Speed</p>
@@ -61,23 +61,23 @@
         document.querySelector(".wind").innerHTML=d.wind.speed  + "kmph";
         if(d.weather[0].main=="Clouds")
         {
-            weathericon.src="images/clouds.png";
+            weathericon.src="clouds.png";
         }
         else if(d.weather[0].main=="Clear")
         {
-            weathericon.src="images/clear.png";
+            weathericon.src="clear.png";
         }
         else if(d.weather[0].main=="Rain")
         {
-            weathericon.src="images/rain.png";
+            weathericon.src="rain.png";
         }
         else if (d.weather[0].main=="Drizzle")
         {
-            weathericon.src="images/drizzle.png"
+            weathericon.src="drizzle.png"
         }
         else if(d.weather[0].main=="Mist")
         {
-            weathericon.src="images/mist.png"
+            weathericon.src="mist.png"
         }
         document.querySelector(".weather").style.display="block";
         document.querySelector(".wrong").style.display="none";
